edition = "2023";

package runv.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option features.field_presence = IMPLICIT;  // makes everything by default required, for optional set to EXPLICIT

service RuncService {
	rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {}

message PingResponse {}
